[package]
name = "rust_ob"
description = "an orderbook library for rust"
readme = "README.md"
keywords = ["financial", "orderbook"]
version = "1.0.5"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/toyota-corolla0/rust_ob"
documentation = "https://docs.rs/rust_ob/latest/rust_ob/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rb_tree = "0.5.0"
rust_decimal = "1.32.0"

[dev-dependencies]
rand = "0.8.5"

