[package]
name = "rust_ob"
description = "an orderbook library for rust"
readme = "README.md"
keywords = ["financial", "orderbook"]
version = "2.5.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/toyota-corolla0/rust_ob"
documentation = "https://docs.rs/rust_ob/latest/rust_ob/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.35.0"

[dev-dependencies]
rand = "0.8.5"

